h1, h2, h3, h4, h5, h6 { text-rendering: optimizelegibility; } entfernt (Performance Issues)

--- a/css/base.css
+++ b/css/base.css
@@ -12,8 +12,6 @@ article, aside, dialog, figure, figcaption, footer, header, hgroup, nav, section
 
 /* Typgraphy -------------------------------------- */
 
-h1, h2, h3, h4, h5, h6 { text-rendering: optimizelegibility; }
-
 ul { list-style: none outside; }
 ul.ul-disc { list-style: disc outside; margin-left: 2em; }
 ul.ul-square { list-style: square outside; margin-left: 2em; }
